--- a/global.css
+++ b/global.css
@@ -724,7 +724,7 @@ html{
 /* Sertificat */
 
 .sertificat__container img{
-    width: 150px !important;
+    width: 250px !important;
 }
                 
         /* feedbackform */
@@ -747,6 +747,14 @@ html{
         background-size: 70px !important;
     }
 
+    .youCan__main{
+        padding-bottom: 20px !important;
+    }
+
+    .youCan__main h2{
+        padding-top: 20px !important;
+    }
+
     
     body .slider__container h1{
         font-size: 25px !important;
@@ -760,10 +768,14 @@ html{
         font-size: 12px !important;
     }
 
+    .description__text {
+        font-size: 12px !important;
+    }
+
     /* Header */
 
     .container-fluid .main__text h1{
-        font-size: 22px !important;
+        font-size: 16px !important;
     }
 
     .social__icon a{
@@ -863,6 +875,11 @@ html{
         background-size: 30px 30px !important;
     }
 
+    .youGet__block article p{
+        font-size: 16px !important;
+    }
+    
+
 
     /* Slider */
     .slider__container{
@@ -887,6 +904,7 @@ html{
     .text_block__content{
         margin-top: 50px !important;
         padding-left: 20px !important;
+        font-size: 14px !important;
     }
 
 
@@ -949,7 +967,7 @@ html{
 
 
     .footer_container .contacts_block .desc{
-        font-size: 18px;
+        font-size: 12px;
         padding-bottom: 50px;
       
 
