--- a/global.css
+++ b/global.css
@@ -30,7 +30,7 @@ html{
     }
             /* Footer */
             .footer_container li a{
-                font-size: 18px;
+                font-size: 10px;
                   
             }
             .footer_container .contacts_block .title{
@@ -54,7 +54,20 @@ html{
     }
 
     .desc_text{
-        font-size: 22px !important;
+        font-size: 20px !important;
+    }
+
+    .title__one{
+        font-size: 50px !important;
+    }
+
+    .title__two{
+        font-size: 40px !important;
+        margin-bottom: 720px !important;
+    }
+
+    .advantage__list{
+        padding-bottom: 100px !important;
     }
 
     /* YouGet */
@@ -128,8 +141,9 @@ html{
 
     .form-container .form-control{
         padding: 10px 30px !important;
-        border-width: 2px !important;
-        font-size: 18px !important;
+        border-width: 1px !important;
+        font-size: 12px !important;
+        margin-bottom: 15px !important;
     }
 
     .form-container .fake{
@@ -149,6 +163,11 @@ html{
 
     .form__btn {
         font-size: 24px !important;
+    }
+
+    .form-container .form__btn{
+        padding: 10px 30px 10px 30px !important;
+        font-size: 16px !important;
     }
 
     .text_block__content{
